--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.17.3",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
-    "sequelize": "^6.29.2"
+    "sequelize": "^6.29.2",
+    "socket.io": "^4.6.1"
   }
 }
